Version 0.20
Name:
- QIde becomes QDevelop at October 4, 2006
Corrections:
- A crash if a file is opened without project
- Bug in classes explorer when a sub-project have a name identical of the main project.
- Deletion of Auto-Hide docks, not working with Qt 4.2
Adds:
- Modification of the class browser to understand functions overloading.
- Moving tabs with mouse to switch between us
- Detection when a file was modified by another program and ask for save or reload.
- Three tabs to show debugged variables program. Deletion of line edit "Debug command", obsolete with new tabs.
- Templates to create a project (based on dialog or main window).
- The code completion list contains the name and signature of functions.
- Entries "Close Other Tabs" and "Close All Tabs" in popup menu showed by right-click on editor Tab.
- Add Polish, Spanish and Chinese translations

September 25 2006 Version 0.19
Corrections:
- The code is entirely translated in English, variables, function names and file names. 
- Improvement of completion, much faster (5 or 6 times). An improved code increases its reliability.
- The location of qmake is determined in this order:
   1. Read in INI file the lasted saved location. If it not saved, use : QLibraryInfo::location( QLibraryInfo::BinariesPath )+"/qmake";
   2. Test if the location finded on 1 is good, otherwise display a dialog for choose qmake location
   In options dialog, it is possible to change the location of qmake anytime.
Adds:
- The classes explorer to navigate into classes and members. By right-click, each item can display the two files of a member or function: implementation and declaration. The double-click shows the implementation if available. The items are updated in real time when the text in editor is modified and the interval between two updates can be configured in options dialog. This new feature require ctags.